<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MockEventful</string>

    <!-- Strings related to login -->

    <string name="facebook_app_id" >202371476866841</string>
    <string name="logged_in_as">Logged In As %1$s</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyBM4qkXDQmDGekF_O9VKwa7_IzywAdPyTE</string>
    <string name="quick_search">Quick Search</string>
    <string name="search_event">Search event by artist</string>
    <string name="artist">Artist</string>
    <string name="event">Event</string>
    <string name="venue">Venue</string>
    <string name="unable_to_connect">Unable to connect: </string>
    <string name="connection_unauthorised">Connection unauthorised</string>
    <string name="no_connection_available">No connection available</string>
    <string name="login_successful">Login successful</string>
    <string name="login_failure">Login failed</string>
    <string name="im_going">I\'m going</string>
    <string name="page">Page</string>
    <string name="page_of">of %1$d</string>
    <string name="loading">Loading...</string>
    <string name="keywords">Search terms</string>
    <string name="within_current">within current location</string>
    <string name="location">Or enter location</string>
    <string name="mi">mi</string>
    <string name="km">km</string>
    <string name="include">Include</string>
    <string name="exclude">Exclude</string>
    <string name="undecided">Not sure</string>
    <string name="include_exclude_categories">Include/exclude categories</string>
    <string name="filter_by_date">Date category: </string>
    <string name="select_date_range">Or select date range</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="next_week">Next week</string>
    <string name="last_week">Last week</string>
    <string name="past">Past</string>
    <string name="future">Future</string>
    <string name="cancel">Cancel</string>
    <string name="yes">OK</string>
    <string name="popularity">Popularity</string>
    <string name="date">Date</string>
    <string name="relevance">Relevance</string>
    <string name="venue_name">Venue Name</string>
    <string name="name">Name</string>
    <string name="event_count">Events</string>
    <string name="demand_member_count">Demands</string>
    <string name="sort_by">Sort by</string>
    <string name="ascending">ascending</string>
    <string name="descending">descending</string>
    <string name="results_per_page">results per page</string>
    <string name="detailed_search">Advanced %1$s Search</string>
    <string name="search_detail">Advanced search</string>
    <string name="search">Search</string>
    <string name="my_events_locations">My events &amp; locations</string>
    <string name="my_events">Events I\'m going to</string>
    <string name="my_locations">My saved locations</string>
    <string name="view_in_browser">View In Browser</string>
    <string name="links">Links</string>
    <string name="upcoming_events">Upcoming events</string>
    <!-- extracted all categories from API because multi-language not supported by API-->
    <string name="categories">Categories</string>
    <string name="music">Concerts &amp; Tour Dates</string>
    <string name="conference">Conferences &amp; Tradeshows</string>
    <string name="comedy">Comedy</string>
    <string name="learning_education">Education</string>
    <string name="family_fun_kids">Kids &amp; Family</string>
    <string name="festivals_parades">Festivals</string>
    <string name="movies_film">Film</string>
    <string name="food">Food &amp; Wine</string>
    <string name="fundraisers">Fundraising &amp; Charity</string>
    <string name="art">Art Galleries &amp; Exhibits</string>
    <string name="support">Health &amp; Wellness</string>
    <string name="holiday">Holiday</string>
    <string name="books">Books</string>
    <string name="attractions">Museums &amp; Attractions</string>
    <string name="community">Neighborhood</string>
    <string name="business">Business &amp; Networking</string>
    <string name="singles_social">Nightlife &amp; Singles</string>
    <string name="schools_alumni">University &amp; Alumni</string>
    <string name="clubs_associations">Organizations &amp; Meetups</string>
    <string name="outdoors_recreation">Outdoors &amp; Recreation</string>
    <string name="performing_arts">Performing Arts</string>
    <string name="animals">Pets</string>
    <string name="politics_activism">Politics &amp; Activism</string>
    <string name="sales">Sales &amp; Retail</string>
    <string name="science">Science</string>
    <string name="religion_spirituality">Religion &amp; Spirituality</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="other">Other &amp; Miscellaneous</string>
    <!-- extracted all categories from API because multi-language not supported by API-->

</resources>
