<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/detail">
        <item
            android:title="@string/search_detail"
            android:enabled="false"
            android:checkable="false"
            android:id="@+id/detail_search">
        </item>
        <item
            android:title="@string/event"
            android:id="@+id/event">
        </item>
        <item android:title="@string/artist"
            android:id="@+id/artist" />
        <item
            android:title="@string/venue"
            android:id="@+id/venue">
        </item>
    </group>
    <group android:id="@+id/my">
        <item
            android:title="menu2"
            android:enabled="false"
            android:checkable="false"
            android:id="@+id/my_events">
        </item>

        <item
            android:title="opt4"
            android:id="@+id/near">
        </item>
        <item
            android:title="opt5"
            android:id="@+id/going">
        </item>
    </group>
</menu>
