<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:layout_above="@+id/submit_button"
    android:background="@color/cardview_light_background"
    android:id="@+id/detail_view">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form"
        android:background="@color/cardview_light_background"
        android:fillViewport="true"
        android:layout_above="@+id/url_button"
        android:layout_alignParentTop="true"
        >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        app:srcCompat="@drawable/ic_close_light"
        android:id="@+id/close_button"
        android:visibility="gone" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/cardview_dark_background"
        android:textStyle="normal|bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/full_image"
        android:padding="5dp" />
<com.google.android.gms.maps.MapView
    android:layout_height="200dp"
    android:id="@+id/map_view"
    android:layout_gravity="center"
    android:layout_width="200dp"
    android:layout_margin="5dp"
    android:clickable="false"
    android:visibility="gone">

</com.google.android.gms.maps.MapView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/will_be_held_at"
        android:gravity="center"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_description" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/upcoming_events" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/link_text"
    android:textSize="18sp"
    android:textStyle="normal|bold"
    android:text="@string/links" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/links" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/im_going"
        android:text="@string/im_going"
        android:layout_gravity="center"
        android:visibility="gone" />
    <!-- no listener for im_going as no plans yet to incorporate user login logic -->

</LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <Button
        android:text="@string/view_in_browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:id="@+id/url_button"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/cardview_light_background" />

</RelativeLayout>